feat: added poppins font

--- a/src/assets/style/tailwind.css
+++ b/src/assets/style/tailwind.css
@@ -1,11 +1,11 @@
-/* @import url(''); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 @layer utilities {
 }
