--- a/src/assets/style/tailwind.css
+++ b/src/assets/style/tailwind.css
@@ -8,4 +8,7 @@
     font-family: 'Poppins', sans-serif;
 }
 @layer utilities {
+    .center {
+        @apply flex justify-center items-center;
+    }
 }
